TM-11703 Display actual start/finish as readonly labels

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -17,6 +17,8 @@
         td.valueNW
           width: 160px
           max-width: 160px
+          .read-only-dates
+            padding-left: 5px
           kendo-dropdownlist
             span.k-dropdown-wrap
               background: white
