--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -197,11 +197,7 @@
                                                     </td>
 
                                                     <td class="valueNW">
-                                                        <kendo-datepicker
-                                                                name="actualStart"
-                                                                [format]="getDateTimeFormat(model.actualStart)"
-                                                                [(value)]="model.actualStart">
-                                                        </kendo-datepicker>
+                                                        <span class="read-only-dates">{{model.actualStart}}</span>
                                                     </td>
 
                                                     <td class="label U" nowrap="nowrap">
@@ -209,11 +205,7 @@
                                                     </td>
 
                                                     <td class="valueNW">
-                                                        <kendo-datepicker
-                                                                name="actualFinish"
-                                                                [format]="getDateTimeFormat(model.actualFinish)"
-                                                                [(value)]="model.actualFinish">
-                                                        </kendo-datepicker>
+                                                        <span class="read-only-dates">{{model.actualFinish}}</span>
                                                     </td>
                                                 </tr>
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
@@ -251,7 +243,7 @@
                                                     </td>
 
                                                     <td class="valueNW">
-                                                        <span>{{model.taskSpec}}</span>
+                                                        <span class="read-only-dates">{{model.taskSpec}}</span>
                                                     </td>
                                                 </tr>
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
