--- a/web-app/tds/web-app/app-js/shared/components/field-reference-popup/field-reference-popup.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/field-reference-popup/field-reference-popup.component.html
@@ -23,6 +23,7 @@
                         </ng-template>
                     </kendo-grid-column>
                     <kendo-grid-column [title]="'Field Name'" field="fieldName"></kendo-grid-column>
+                    <kendo-grid-column [title]="'Operator'" field="operator"></kendo-grid-column>
                     <kendo-grid-column [title]="'Value'" field="value"></kendo-grid-column>
                 </kendo-grid>
                 <div class="footer-results">
