--- a/web-app/tds/web-app/app-js/app/tds-app.component.html
+++ b/web-app/tds/web-app/app-js/app/tds-app.component.html
@@ -4,5 +4,5 @@
 <!-- <div ui-view="headerView"></div> -->
 <!-- <div ui-view="containerView"></div> -->
 
-<!-- <tds-header></tds-header> -->
+<tds-header></tds-header>
 <router-outlet></router-outlet>
