--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -15,6 +15,7 @@
         .duplicate-error
           font-weight: normal
           color: $color-message-error--red
+          font-weight: bold
           float: right
         td.valueNW
           width: 160px
