--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -12,6 +12,11 @@
     .modal-body
       height: 86%
       form
+        .ng-invalid
+          border: 1px solid $color-message-error--red
+        .required-field::after
+          content: "*"
+          color: $color-message-error--red
         .duplicate-error
           font-weight: normal
           color: $color-message-error--red
