--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -13,7 +13,7 @@
       height: 86%
       form
         .ng-invalid
-          border: 1px solid $color-message-error--red
+          border-color: $color-message-error--red
         .required-field::after
           content: "*"
           color: $color-message-error--red
