TM-11073 Handle prompt lose changes closing the view

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -431,7 +431,7 @@
             </div>
             <div class="modal-footer form-group-center">
 	            <button class="btn btn-primary pull-left"
-                        [disabled]="!taskEditForm.form.valid || hasInvalidFields() ||  !(taskEditForm.form.dirty || hasModelChanges)" (click)="onSave()" type="button">
+                        [disabled]="isFormInvalid()" (click)="onSave()" type="button">
 		            <span  class="fa fa-fw fa-floppy-o"></span>
 		            <span>Update</span>
 	            </button>
