--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -7,17 +7,21 @@
     <ng-template kendoGridToolbarTemplate [position]="'top'" class="header-section">
 		<div class="col-sm-6 bulkchange-section">
 			<button type="button" class="btn btn-default btn-between-space-5" [disabled]="!canCreateAssets()"
-					*ngIf="_viewId === ASSET_ENTITY_MENU.All_ASSETS || _viewId === ASSET_ENTITY_MENU.All_APPLICATIONS">
+					*ngIf="_viewId === ASSET_ENTITY_MENU.All_ASSETS || _viewId === ASSET_ENTITY_MENU.All_APPLICATIONS"
+					(click)="onCreateAsset(ASSET_ENTITY_DIALOG_TYPES.APPLICATION)">
 				{{'ASSET_EXPLORER.CREATE_APPLICATION' | translate}}</button>
 			<button type="button" class="btn btn-default btn-between-space-5" [disabled]="!canCreateAssets()"
-					*ngIf="_viewId === ASSET_ENTITY_MENU.All_ASSETS || _viewId === ASSET_ENTITY_MENU.All_DATABASES">
+					*ngIf="_viewId === ASSET_ENTITY_MENU.All_ASSETS || _viewId === ASSET_ENTITY_MENU.All_DATABASES"
+					(click)="onCreateAsset(ASSET_ENTITY_DIALOG_TYPES.DATABASE)">
 				{{'ASSET_EXPLORER.CREATE_DATABASE' | translate}}</button>
 			<button type="button" class="btn btn-default btn-between-space-5" [disabled]="!canCreateAssets()"
 					*ngIf="_viewId === ASSET_ENTITY_MENU.All_ASSETS || _viewId === ASSET_ENTITY_MENU.All_DEVICE ||
-					       _viewId === ASSET_ENTITY_MENU.All_STORAGE_PHYSICAL || _viewId === ASSET_ENTITY_MENU.All_SERVERS">
+					       _viewId === ASSET_ENTITY_MENU.All_STORAGE_PHYSICAL || _viewId === ASSET_ENTITY_MENU.All_SERVERS"
+					(click)="onCreateAsset(ASSET_ENTITY_DIALOG_TYPES.DEVICE)">
 				{{'ASSET_EXPLORER.CREATE_DEVICE' | translate}}</button>
 			<button type="button" class="btn btn-default btn-between-space-5" [disabled]="!canCreateAssets()"
-					*ngIf="_viewId === ASSET_ENTITY_MENU.All_ASSETS || _viewId === ASSET_ENTITY_MENU.All_STORAGE_VIRTUAL">
+					*ngIf="_viewId === ASSET_ENTITY_MENU.All_ASSETS || _viewId === ASSET_ENTITY_MENU.All_STORAGE_VIRTUAL"
+					(click)="onCreateAsset(ASSET_ENTITY_DIALOG_TYPES.STORAGE)">
 				{{'ASSET_EXPLORER.CREATE_STORAGE' | translate}}</button>
 			<tds-bulk-change-button [bulkItems]="bulkItems"
 			                        [enabled]="hasSelectedItems()"
